--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,14 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+
+    /**Button colors**/
+    <color name="btnSignup">#39796b</color>
+    <color name="btnSignIn">#A9d440</color>
+    /**Background colors**/
+    <color name="overlayBackground">#7f333639</color>
+    <color name="overlayActionBar">#0e0d0e</color>
+
+    <color name="bgRowBackground">#FA315B</color>
 </resources>
