--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -31,7 +31,7 @@
             android:id="@+id/nav_orders"
             android:iconTint="@android:color/white"
             android:icon="@drawable/ic_access_time_black_24dp"
-            android:title="Orders" />
+            android:title="Land Orders" />
         <item
             android:id="@+id/nav_update_name"
             android:icon="@drawable/ic_security_black_24dp"
