--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:src="@drawable/bg2"
+            android:src="@drawable/logo"
             android:layout_width="200dp"
             android:layout_height="200dp" />
 
