--- a/app/src/main/res/layout/activity_mpesa.xml
+++ b/app/src/main/res/layout/activity_mpesa.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
-    tools:context=".MpesaActivity">
+    tools:context=".MpesaActivity"
+    android:padding="10dp">
 
 
     <TextView
